# cppgate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: Tools.cmake
conan/: BuildMacOS.sh  BuildVS2022.bat  README.md  conanfile.py  msvc.profile
include/cppgate/: HttpSession.h  Listener.h  Log.h  Router.h  WebSocketSession.h  WebSocketSessionInterface.h  cppgate.h
scripts/: BuildCMake.bat  BuildMacOS.sh  BuildVS2022.bat  README.md
sources/BoostBeast/: HttpSession.cpp  Listener.cpp  WebSocketSession.cpp
sources/Core/: Log.cpp  Router.cpp
tests/router/: CMakeLists.txt  test_router.cpp
